[gd_scene load_steps=5 format=3 uid="uid://dcg54iac8kcst"]

[ext_resource type="Script" path="res://survivors_game.gd" id="1_l4c2m"]
[ext_resource type="PackedScene" uid="uid://bssdgkhens4cy" path="res://player.tscn" id="1_lwmhs"]
[ext_resource type="Script" path="res://game_manager.gd" id="2_bqabm"]

[sub_resource type="Curve2D" id="Curve2D_3cw5r"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -166.075, 1208, 0, 0, 0, 0, -172, -95, 0, 0, 0, 0, 1970, -98, 0, 0, 0, 0, 1969, 1210, 0, 0, 0, 0, -164, 1208, 0, 0, 0, 0, -165, 1209, 0, 0, 0, 0, -166.075, 1208)
}
point_count = 7

[node name="Game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_l4c2m")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -99

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_left = -67.0
offset_top = -15.0
offset_right = 1938.0
offset_bottom = 1115.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.247059, 0.607843, 0.0431373, 1)

[node name="GameManager" type="Node" parent="CanvasLayer/ColorRect"]
unique_name_in_owner = true
script = ExtResource("2_bqabm")

[node name="ScoreLabel" type="Label" parent="CanvasLayer/ColorRect/GameManager"]
anchors_preset = -1
anchor_left = 0.000520833
anchor_top = 0.0203704
anchor_right = 0.053125
anchor_bottom = 0.062037
offset_left = 49.0
offset_top = -2.0
offset_right = 100.0
offset_bottom = 20.0001
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 48
text = "Score"
uppercase = true

[node name="BulletLabel" type="Label" parent="CanvasLayer/ColorRect/GameManager"]
anchors_preset = -1
anchor_left = 0.000520833
anchor_top = 0.0203704
anchor_right = 0.053125
anchor_bottom = 0.062037
offset_left = 4.0
offset_top = 86.0
offset_right = 103.0
offset_bottom = 108.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 48
text = "Bullets"
uppercase = true

[node name="ScoreOSD" type="Label" parent="CanvasLayer/ColorRect/GameManager"]
anchors_preset = -1
anchor_left = 0.059375
anchor_top = 0.0203704
anchor_right = 0.144792
anchor_bottom = 0.062037
offset_left = 106.0
offset_top = -2.00003
offset_right = 352.999
offset_bottom = 20.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 48
text = "-"
uppercase = true

[node name="BulletOSD" type="Label" parent="CanvasLayer/ColorRect/GameManager"]
anchors_preset = -1
anchor_left = 0.059375
anchor_top = 0.0203704
anchor_right = 0.144792
anchor_bottom = 0.062037
offset_left = 106.0
offset_top = 83.0
offset_right = 352.999
offset_bottom = 105.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 48
text = "-"
uppercase = true

[node name="KillsOSD" type="Label" parent="CanvasLayer/ColorRect/GameManager"]
visible = false
offset_left = 592.0
offset_top = 20.0
offset_right = 674.0
offset_bottom = 70.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "0000
"

[node name="HitRateOSD" type="Label" parent="CanvasLayer/ColorRect/GameManager"]
visible = false
offset_left = 683.0
offset_top = 20.0
offset_right = 792.0
offset_bottom = 65.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "00.00%"

[node name="Player" parent="." instance=ExtResource("1_lwmhs")]
position = Vector2(912, 559)

[node name="Path2D" type="Path2D" parent="Player"]
position = Vector2(-909.832, -559)
scale = Vector2(1.01261, 1)
curve = SubResource("Curve2D_3cw5r")

[node name="PathFollow2D" type="PathFollow2D" parent="Player/Path2D"]
unique_name_in_owner = true
position = Vector2(-166.075, 1208)
rotation = -1.57534

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="GameOver" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOver"]
offset_left = -65.0
offset_top = -14.0
offset_right = 1938.0
offset_bottom = 1115.0
color = Color(0, 0, 0, 0.784314)

[node name="TitleEnd" type="Label" parent="GameOver/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1001.5
offset_top = -357.5
offset_right = 1000.5
offset_bottom = -38.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 160
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="ScoreLabel" type="Label" parent="GameOver/ColorRect"]
layout_mode = 0
offset_left = 583.0
offset_top = 545.0
offset_right = 960.0
offset_bottom = 677.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 96
text = "Score"
horizontal_alignment = 2
vertical_alignment = 1

[node name="KillsLabel" type="Label" parent="GameOver/ColorRect"]
layout_mode = 0
offset_left = 578.0
offset_top = 677.0
offset_right = 955.0
offset_bottom = 809.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 96
text = "Kills"
horizontal_alignment = 2
vertical_alignment = 1

[node name="ScoreOSD" type="Label" parent="GameOver/ColorRect"]
layout_mode = 0
offset_left = 1029.0
offset_top = 547.0
offset_right = 1670.0
offset_bottom = 679.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 96
text = "000000
"
vertical_alignment = 1

[node name="KillsOSD" type="Label" parent="GameOver/ColorRect"]
layout_mode = 0
offset_left = 1027.0
offset_top = 676.0
offset_right = 1668.0
offset_bottom = 808.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 96
text = "000000
"
vertical_alignment = 1

[node name="HitRateOSD" type="Label" parent="GameOver/ColorRect"]
layout_mode = 0
offset_left = 1030.0
offset_top = 803.0
offset_right = 1671.0
offset_bottom = 935.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 96
text = "000000
"
vertical_alignment = 1

[node name="HitRateLabel" type="Label" parent="GameOver/ColorRect"]
layout_mode = 0
offset_left = 585.0
offset_top = 802.0
offset_right = 962.0
offset_bottom = 934.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 96
text = "Hit Rate"
horizontal_alignment = 2
vertical_alignment = 1

[connection signal="health_depleted" from="Player" to="." method="_on_player_health_depleted"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
